--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,31 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --gray: #333;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  background: radial-gradient(circle 40vw at 0px 700px, #dbc1ffa1, transparent),
+    radial-gradient(circle 40vw at 50% 600px, #ffe2fbcf, transparent),
+    radial-gradient(circle 40vw at 70% 800px, #7ad4d333, transparent),
+    linear-gradient(
+      transparent,
+      400px,
+      transparent,
+      1000px,
+      hsla(225.7, 59.23%, 69.34%, 0.12),
+      #ffe2fbcf
+    );
+
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
+  height: 100vh;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+/* Remove text styling */
+ul,
+li,
+a {
+  text-decoration: none;
+  list-style-type: none;
+  text-decoration: none;
 }
