--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,7 @@ body {
 
   display: flex;
   flex-direction: column;
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 /* Remove text styling */
