--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,10 @@
 footer {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    bottom: 4%;
+    text-align: center;
+    position: absolute;
     width: 100%;
+    padding-bottom: 40px;
     color: var(--faded);
+    bottom: 0;
+    left: 0;
+    padding: 40px 0;
 }
