--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,7 @@
 footer {
     text-align: center;
-    position: absolute;
+    position: relative;
     width: 100%;
-    padding-bottom: 40px;
     color: var(--faded);
     bottom: 0;
     left: 0;
